# customer-churn-mlops-pipeline

./: .dockerignore  .dvcignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: main.yml
app/: main.py
app/inference/: predict.py
app/routes/: api.py
app/schemas/: request_body.py
config/: hyperparams.yaml  settings.py
data/processed/: engineered_churn_data.csv.dvc
examples/: sample_request.json
models/: catboost_churn_model.cbm  catboost_churn_model.cbm.dvc  scaler.pkl
notebooks/: 01_data_ingestion.ipynb  02_eda_exploration.ipynb  03_data_preprocessing.ipynb  04_feature_engineering.ipynb  05_model_training.ipynb  06_model_evaluation.ipynb
pipelines/: 01_data_ingestion.py  data_ingestion.py  data_transformation.py  model_evaluation.py  model_training.py
sql/: 02_preprocessing.sql  03_data_validation.sql  analysis.sql  preprocessing.sql  schemas.sql
tests/: test_data_quality.py  test_data_transformation.py  test_model_performance.py
tests/fixtures/: sample_testing.csv  sample_training.csv
utils/: helpers.py  loggers_config.py
