[project]
name = "customer-churn-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "fastapi>=0.135.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.43.0",
    "xgboost>=3.2.0",
]
